amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.1:
  ADD: Tagless tracks now go into Collection too, listed as "unknown".
  ADD: Automatic album cover fetching is back and improved.
  ADD: Option for automatically switching to Context when playback is started.
  CHG: Stream timeout value is now determined from KDE user settings.
  ADD: Support for password-protected streams, by wef <javapojken@yahoo.se>. 
  FIX: GStreamer engine must not allow non-audio filetypes in playlist.
  ADD: Icon for "Menu" button in toolbar. Improves Usability.

VERSION 1.0.2:
  FIX: aRts-engine: Streams sometimes stopping shortly after playback was
       started. (BR 84417)
  CHG: Increased stream connect timeout to 12 seconds.
  
VERSION 1.0.1:
  FIX: Short dropouts after starting a stream with GStreamer.
  FIX: amaroK starting invisible when systray icon is disabled.
  FIX: Playlist analyzer looks freaky on some systems. (BR 83671)
  FIX: Display filename in title column for wav files. (BR 83650)
  FIX: Don't show crash dialog when no engine plugins are found.
  FIX: Compile issue for KDE < 3.2.1 users. Sorry :(

VERSION 1.0:
  FIX: Plugin versions are validated. Prevents crashes with ancient plugins.
  FIX: Configure now checks for gtk/gdk headers for the XMMSwrapper.
  REM: Removed cover download feature for this release.
  FIX: Do not crash if an unreadable dir is added to the collection.
  FIX: Check database-sanity on startup and recreate broken tables (BR 83205).
  FIX: CollectionBrowser was broken, when amaroK was running "localized".
  FIX: TitleProxy hogging 100% CPU when unable to connect to server.
  CHG: Bumped GStreamer requirement to 0.8.1.
  ADD: Glowing player window icons.
  ADD: amaroK finally remembers if it was hidden on exit.
  ADD: OSDPreview now has snap to regions.
  FIX: Newly shown columns in playlist can now be resized.
  FIX: BR 82020: next/prev buttons disabled when they shouldn't be.